# mcp-oraclefusion

./: .env.example  .gitignore  README.md  pyproject.toml  stdio_server.py
oracle_fusion_mcp/: _types.py  cli.py
oracle_fusion_mcp/auth/: entra.py  oracle_jwt.py
oracle_fusion_mcp/config/: settings.py
oracle_fusion_mcp/mcp/tools/: __init__.py  _helpers.py  ap_tools.py  ar_tools.py  expense_tools.py  gl_tools.py  hcm_tools.py  infra_tools.py  math_tools.py  procurement_tools.py  write_ap_tools.py  write_po_tools.py  write_req_tools.py
oracle_fusion_mcp/oracle/: client.py  field_maps.py
oracle_fusion_mcp/utils/: logging.py
